@@ -2,6 +2,7 @@ package Test2::Tools::HTTP::UA::LWPClass;
 
 use strict;
 use warnings;
+use 5.012;
 use URI;
 use parent 'Test2::Tools::HTTP::UA';
 
